--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <img class="logo" src="./assets/logo-pag02.png" alt="Logo de pagina" />
       <nav class="navbar">
         <ul class="navbar-list">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Descubre</a></li>
-          <li><a href="#">Promociones</a></li>
-          <li><a href="#">Informacion</a></li>
-          <li><a href="#">Contacto</a></li>
-          <li><a href="#">Registrarse</a></li>
+          <li><a href="login.html">Ingresar</a></li>
+          <li><a href="#descubre">Descubre</a></li>
+          <li><a href="#promociones">Promociones</a></li>
+          <li><a href="#informacion">Informacion</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="register.html">Registrate</a></li>
         </ul>
       </nav>
     </header>
@@ -35,7 +35,7 @@
         </div>
       </section>
 
-      <div class="divisor"></div>
+      <div class="divisor" id="descubre"></div>
 
       <section id="discover">
         <div class="container">
@@ -63,6 +63,8 @@
           </div>
         </div>
       </section>
+
+      <div class="divisor" id="promociones"></div>
 
       <section id="promotion">
         <div class="container">
@@ -123,7 +125,7 @@
         </div>
       </section>
 
-      <div class="divisor"></div>
+      <div class="divisor" id="informacion"></div>
 
       <section id="about">
         <div class="information">
@@ -177,7 +179,7 @@
           </div>
         </div>
       </section>
-      <div class="contact-info">
+      <div class="contact-info" id="contacto">
         <div class="contact-card">
           <h3>Atención al Cliente</h3>
           <span>0810.252.8479</span>
