--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <title>Dream Travel ARG</title>
     <link rel="icon" href="./assets/logo-pestaña.ico" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link
+    href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+    rel="stylesheet"
+  />
   </head>
   <body>
     <header>
       <img class="logo" src="./assets/logo-pag02.png" alt="Logo de pagina" />
       <nav class="navbar">
+        <label for="toggle-menu"><i class='bx bx-menu'></i></label>
+        <input type="checkbox" id="toggle-menu">
+
         <ul class="navbar-list">
           <li><a href="login.html">Ingresar</a></li>
           <li><a href="#descubre">Descubre</a></li>
