--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="icon" href="./assets/logo-pestaña.ico" />
     <link rel="stylesheet" href="./assets/style.css" />
     <link
-    href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-    rel="stylesheet"
-  />
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <img class="logo" src="./assets/logo-pag02.png" alt="Logo de pagina" />
       <nav class="navbar">
-        <label for="toggle-menu"><i class='bx bx-menu'></i></label>
-        <input type="checkbox" id="toggle-menu">
+        <label for="toggle-menu"><i class="bx bx-menu"></i></label>
+        <input type="checkbox" id="toggle-menu" />
 
         <ul class="navbar-list">
           <li><a href="login.html">Ingresar</a></li>
@@ -195,22 +195,22 @@
         <div class="contact-card">
           <h3>Consultas</h3>
           <div class="tel">
-            <img src="./assets/logotel.png" alt="telefono">
+            <img src="./assets/logotel.png" alt="telefono" />
             <p>0351.5184669</p>
           </div>
           <div class="mail">
-            <img src="./assets/logomail.png" alt="telefono">
+            <img src="./assets/logomail.png" alt="telefono" />
             <p>dreamtravel@gmail.com</p>
           </div>
         </div>
         <div class="contact-card">
           <h3>Sucursales</h3>
           <div class="ubi">
-            <img src="./assets/sucursal.png" alt="ubicacion">
+            <img src="./assets/sucursal.png" alt="ubicacion" />
             <p>Av.Velez Sarfield 1231. Cordoba</p>
           </div>
           <div class="ubi">
-            <img src="./assets/sucursal.png" alt="ubicacion">
+            <img src="./assets/sucursal.png" alt="ubicacion" />
             <p>Av.9 de Julio 4300. B Aires</p>
           </div>
         </div>
