--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           </div>
           <div class="mail">
             <img src="./assets/logomail.png" alt="telefono" />
-            <p>dreamtravel@gmail.com</p>
+            <p>travel@gmail.com</p>
           </div>
         </div>
         <div class="contact-card">
