--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dream Travel ARG</title>
     <link rel="icon" href="./assets/logo-pestaña.ico" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/mediaqueries.css">
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
