--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </div>
       </section>
 
+      <div id="descubre"></div>
+
       <section id="discover">
         <div class="container">
           <div class="discover-text">
@@ -69,6 +71,8 @@
           </div>
         </div>
       </section>
+
+      <div id="promociones"></div>
 
       <section id="promotion">
         <div class="container">
@@ -133,6 +137,8 @@
           </div>
         </div>
       </section>
+
+      <div id="informacion"></div>
 
       <section id="about">
         <div class="information">
