--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dream Travel ARG</title>
     <link rel="icon" href="./assets/logo-pestaña.ico" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/animaciones.css">
     <link rel="stylesheet" href="./assets/mediaqueries.css">
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -27,6 +28,7 @@
           <li><a href="#contacto">Contacto</a></li>
           <li><a href="register.html">Registrate</a></li>
         </ul>
+        <div class="overlay"></div>
       </nav>
     </header>
 
@@ -34,7 +36,7 @@
       <section id="hero">
         <div class="hero-card">
           <div class="hero-card-title">
-            <h1>Todos los <span>Destinos</span> a tu alcance</h1>
+            <h1>Todos los Destinos a tu alcance</h1>
           </div>
           <div class="hero-card-search">
             <input type="text" placeholder="¿A donde viajas?" />
