--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <title>Dream Travel | Registrate</title>
     <link rel="icon" href="./assets/logo-pestaña.ico" />
     <link rel="stylesheet" href="./assets/login.css">
+    <link rel="stylesheet" href="./assets/animaciones.css">
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
