--- a/login.html
+++ b/login.html
@@ -6,10 +6,10 @@
     <title>Dream Travel | Ingresa</title>
     <link rel="icon" href="./assets/logo-pestaña.ico" />
     <link rel="stylesheet" href="./assets/login.css" />
+    <link rel="stylesheet" href="./assets/animaciones.css">
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
   </head>
   <body>
     <div class="wrapper">
