--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./assets/logo-pag02.png" alt="Logo de pagina" />
+      <a href="#hero"><img class="logo" src="./assets/logo-pag02.png" alt="Logo de pagina" /></a>
       <nav class="navbar">
         <label for="toggle-menu"><i class="bx bx-menu"></i></label>
         <input type="checkbox" id="toggle-menu" />
